--- a/modules/rpi/camera/apps/pub/CMakeLists.txt
+++ b/modules/rpi/camera/apps/pub/CMakeLists.txt
@@ -3,10 +3,10 @@
 # =================================================================================================
 
 define_module_app(
-  NAME picam_pub
-  SOURCES picam_pub.cpp
+  NAME rpi_camera_pub
+  SOURCES rpi_camera_pub.cpp
   PUBLIC_LINK_LIBS "grape::conio;grape::script")
 
-set(CONF_DEST_DIR ${CMAKE_PROJECT_NAME}/picam_pub)
+set(CONF_DEST_DIR ${CMAKE_PROJECT_NAME}/rpi_camera_pub)
 configure_file(config.lua ${CMAKE_BINARY_DIR}/share/${CONF_DEST_DIR}/config.lua)
 install(FILES config.lua DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CONF_DEST_DIR})
