feat(ipc): Adds an example to demonstrate parameter publishing service
(cherry picked from commit 755d5c75ef89305f1cdfc68498fb7dead9004e17)

--- a/modules/common/ipc/examples/CMakeLists.txt
+++ b/modules/common/ipc/examples/CMakeLists.txt
@@ -6,4 +6,5 @@ define_module_example(NAME raw_pub_example SOURCES raw_pub_example.cpp)
 define_module_example(NAME raw_sub_example SOURCES raw_sub_example.cpp)
 define_module_example(NAME pub_example SOURCES topic_example.h pub_example.cpp)
 define_module_example(NAME sub_example SOURCES topic_example.h sub_example.cpp)
+define_module_example(NAME param_pub_example SOURCES param_pub_example.cpp)
 define_module_example(NAME service_example SOURCES service_example.cpp)
